# pynatural

./: README.md  pyproject.toml  setup.py
pynatural/: __init__.py
pynatural/examples/: demo.py
swift/: Package.resolved  Package.swift
swift/Sources/PyNatural/: PyNatural.swift
