[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynatural"
version = "0.2.1"
description = "Apple NaturalLanguage framework from Python — powered by Swift & ApplePy"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [{name = "Jagtesh Chadha"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Repository = "https://github.com/jagtesh/pynatural"

[tool.setuptools.packages.find]
include = ["pynatural*"]

[tool.setuptools.package-data]
pynatural = ["*.so"]
